--- a/EventExploreServer/templates/index.html
+++ b/EventExploreServer/templates/index.html
@@ -1,44 +1,313 @@
-{% load static %}
 <!DOCTYPE html>
+{% load static %}}
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-    <!-- 生产环境中不建议使用 -->
-    <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
-    <link rel="stylesheet", type="text/css", href="{% static 'css/index.css' %}">
-  </head>
-  <body>
-    <div id="container" style="padding: 24px" />
-    <script src="{% static 'js/index.js' %}"> </script>
-    <script>var mountNode = document.getElementById('container');</script>
-  </body>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width">
+        <title>neo4jd3.js</title>
+
+        <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+        <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
+        <link rel="stylesheet" href="/static/css/neo4jd3.min.css?v=0.0.1">
+
+        <style>
+            body,
+            html,
+            .neo4jd3 {
+                height: 100%;
+                overflow: hidden;
+            }
+        </style>
+    </head>
+
+
+    <body>
+        <div id="neo4jd3"></div>
+        <!-- Scripts -->
+        <script src="{% static 'js/d3.min.js' %}"></script>
+        <script src="/static/js/neo4jd3.js?v=0.0.1"></script>
+        <script type="text/javascript">
+            gdata = {
+    "results": [
+        {
+            "columns": [],
+            "data": [
+                {
+                    "graph": {
+                        "nodes": [
+                            {
+                                "id": "1",
+                                "labels": [],
+                                "properties": {
+                                    "userId": "eisman"
+                                }
+                            },
+                            {
+                                "id": "8",
+                                "labels": ["Project"],
+                                "properties": {
+                                    "word" : "eeee"
+                                }
+                            }
+                        ],
+                        "relationships": [
+                            {
+                                "type": "DEVELOPES",
+                                "startNode": "1",
+                                "endNode": "8",
+                                "properties": {
+                                    "from": 1470002400000
+                                }
+                            },
+                            {
+                                "type": "DEVELOPES",
+                                "startNode": "8",
+                                "endNode": "1",
+                                "properties": {
+                                    "from": 1470002400000
+                                }
+                            }
+                        ]
+                    }
+                }
+            ]
+        }
+    ],
+    "errors": []
+};
+            gdata = {
+    "results": [
+        {
+            "columns": [],
+            "data": [
+                {
+                    "graph": {
+                        "nodes": [
+                            {
+                                "id": 0,
+                                "labels": [
+                                    "Entity"
+                                ],
+                                "properties": {
+                                    "word": "马来西亚"
+                                }
+                            },
+                            {
+                                "id": 1,
+                                "labels": [
+                                    "Entity"
+                                ],
+                                "properties": {
+                                    "word": "马航"
+                                }
+                            },
+                            {
+                                "id": 2,
+                                "labels": [
+                                    "Entity"
+                                ],
+                                "properties": {
+                                    "word": "波音777客机"
+                                }
+                            },
+                            {
+                                "id": 3,
+                                "labels": [
+                                    "Entity"
+                                ],
+                                "properties": {
+                                    "word": "马来西亚客机"
+                                }
+                            },
+                            {
+                                "id": 4,
+                                "labels": [
+                                    "Entity"
+                                ],
+                                "properties": {
+                                    "word": "沙赫乔尔斯克"
+                                }
+                            }
+                        ],
+                        "relationships": [
+                            {
+                                "id": 100000,
+                                "type": "飞往的",
+                                "startNode": "0",
+                                "endNode": "0",
+                                "properties": {}
+                            },
+                            {
+                                "id": 100001,
+                                "type": "飞往的",
+                                "startNode": "0",
+                                "endNode": "1",
+                                "properties": {}
+                            },
+                            {
+                                "id": 100002,
+                                "type": "总理",
+                                "startNode": "0",
+                                "endNode": "2",
+                                "properties": {}
+                            },
+                            {
+                                "id": 100003,
+                                "type": "国防部长",
+                                "startNode": "0",
+                                "endNode": "3",
+                                "properties": {}
+                            },
+                            {
+                                "id": 100004,
+                                "type": "农业部长",
+                                "startNode": "0",
+                                "endNode": "4",
+                                "properties": {}
+                            }
+                        ]
+                    }
+                }
+            ]
+        }
+    ],
+    "errors": []
+};
+            function init(gdata) {
+                var neo4jd3 = new Neo4jd3('#neo4jd3', {
+                    highlight: [
+                        {
+                            class: 'Project',
+                            property: 'name',
+                            value: 'neo4jd3'
+                        }, {
+                            class: 'User',
+                            property: 'userId',
+                            value: 'eisman'
+                        }
+                    ],
+                    icons: {
+//                        'Address': 'home',
+                        'Api': 'gear',
+//                        'BirthDate': 'birthday-cake',
+                        'Cookie': 'paw',
+//                        'CreditCard': 'credit-card',
+//                        'Device': 'laptop',
+                        'Email': 'at',
+                        'Git': 'git',
+                        'Github': 'github',
+                        'Google': 'google',
+//                        'icons': 'font-awesome',
+                        'Ip': 'map-marker',
+                        'Issues': 'exclamation-circle',
+                        'Language': 'language',
+                        'Options': 'sliders',
+                        'Password': 'lock',
+                        'Phone': 'phone',
+                        'Project': 'folder-open',
+                        'SecurityChallengeAnswer': 'commenting',
+                        'User': 'user',
+                        'zoomFit': 'arrows-alt',
+                        'zoomIn': 'search-plus',
+                        'zoomOut': 'search-minus'
+                    },
+                    images: {
+                        'Address': 'img/twemoji/1f3e0.svg',
+//                        'Api': 'img/twemoji/1f527.svg',
+                        'BirthDate': 'img/twemoji/1f382.svg',
+                        'Cookie': 'img/twemoji/1f36a.svg',
+                        'CreditCard': 'img/twemoji/1f4b3.svg',
+                        'Device': 'img/twemoji/1f4bb.svg',
+                        'Email': 'img/twemoji/2709.svg',
+                        'Git': 'img/twemoji/1f5c3.svg',
+                        'Github': 'img/twemoji/1f5c4.svg',
+                        'icons': 'img/twemoji/1f38f.svg',
+                        'Ip': 'img/twemoji/1f4cd.svg',
+                        'Issues': 'img/twemoji/1f4a9.svg',
+                        'Language': 'img/twemoji/1f1f1-1f1f7.svg',
+                        'Options': 'img/twemoji/2699.svg',
+                        'Password': 'img/twemoji/1f511.svg',
+//                        'Phone': 'img/twemoji/1f4de.svg',
+                        'Project': 'img/twemoji/2198.svg',
+                        'Project|name|neo4jd3': 'img/twemoji/2196.svg',
+//                        'SecurityChallengeAnswer': 'img/twemoji/1f4ac.svg',
+                        'User': 'img/twemoji/1f600.svg'
+//                        'zoomFit': 'img/twemoji/2194.svg',
+//                        'zoomIn': 'img/twemoji/1f50d.svg',
+//                        'zoomOut': 'img/twemoji/1f50e.svg'
+                    },
+                    minCollision: 60,
+                    {#neo4jDataUrl: '/static/neo4jData.json',#}
+                    neo4jData: gdata,
+                    nodeRadius: 25,
+                    onNodeDoubleClick: function(node) {
+                        switch(node.id) {
+                            case '25':
+                                // Google
+                                window.open(node.properties.url, '_blank');
+                                break;
+                            default:
+                                var maxNodes = 5,
+                                    data = neo4jd3.randomD3Data(node, maxNodes);
+                                neo4jd3.updateWithD3Data(data);
+                                break;
+                        }
+                    },
+                    onRelationshipDoubleClick: function(relationship) {
+                        console.log('double click on relationship: ' + JSON.stringify(relationship));
+                    },
+                    zoomFit: true
+                });
+            }
+
+            {#window.onload = init;#}
+            init(gdata);
+        </script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+        <script>
+            url = 'explore/马航MH370';
+            method = 'GET';
+            data = '';
+            function ajaxLog(s) {
+                var txt = $('#test-response-text');
+                txt.val(txt.val() + '\n' + s);
+            }
+            var jqxhr = $.ajax(url, {
+                    dataType: 'json'
+                }).done(function (data) {
+                    console.log('success......');
+                    console.log(data);
+
+                    ajaxLog('成功, 收到的数据: ' + JSON.stringify(data));
+                }).fail(function (xhr, status) {
+                    ajaxLog('失败: ' + xhr.status + ', 原因: ' + status);
+                    console.log(xhr.status)
+                }).always(function () {
+                    ajaxLog('请求完成: 无论成功或失败都会调用');
+                });
+
+        {#function ttt1(){#}
+        {#    $.ajax({#}
+        {#        async: true,#}
+        {#        crossDomain: true,#}
+        {#        url: url,#}
+        {#        method: method,#}
+        {#        headers: {#}
+        {#            "content-type": "application/json"#}
+        {#        },#}
+        {#        processData: false,#}
+        {#        data: JSON.stringify(jsonObject),#}
+        {#        timeout: 0,#}
+        {#        success: function (response) {#}
+        {#            console.log(response);#}
+        {#        },#}
+        {#    });#}
+        {#}#}
+        {#    ttt1();#}
+        </script>
+    </body>
 </html>
-{#{% load static %}#}
-{#<!DOCTYPE html>#}
-{#<html lang="en">#}
-{#<head>#}
-{#    <meta charset="UTF-8">#}
-{#    <title>Title</title>#}
-{#    <script src="https://unpkg.com/react@16/umd/react.development.js"></script>#}
-{#    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>#}
-{#    <!-- 生产环境中不建议使用 -->#}
-{#    <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>#}
-{#</head>#}
-{#<body>#}
-{#<img src="{% static 'image/images.png' %}" alt="My image">#}
-{##}
-{#<div id="example"></div>#}
-{##}
-{#<script type="text/babel">#}
-{#ReactDOM.render(#}
-{#	<h1>Hello, world!</h1>,#}
-{#	document.getElementById('example')#}
-{#);#}
-{#</script>#}
-{##}
-{#</body>#}
-{#</html>#}
+
